this is the third commit

--- a/index.html
+++ b/index.html
@@ -173,11 +173,6 @@ gap: 20px;
     background-color: #3752FD;
 }
 
-/* .completed:disabled {
-    background: gray;
-    cursor: not-allowed;
-} */
-
 .clear-history{
     font-size: large;
     color:#f9f9f9;
@@ -330,6 +325,6 @@ gap: 20px;
        </section>
     </div>
    </main>
-  <script src="/assignment5.js"></script>
+  <script src="assignment5.js"></script>
 </body>
 </html>
