--- a/index.html
+++ b/index.html
@@ -325,6 +325,6 @@ gap: 20px;
        </section>
     </div>
    </main>
-  <script src="assignment5.js"></script>
+  <script src="./assignment5.js"></script>
 </body>
 </html>
