--- a/index.html
+++ b/index.html
@@ -324,6 +324,6 @@ gap: 20px;
        </section>
     </div>
    </main>
-  <script src="./assignment5.js"></script>
+  <script src="/assignment5.js"></script>
 </body>
 </html>
