this is the 8th commit

--- a/index.html
+++ b/index.html
@@ -212,15 +212,15 @@ gap: 20px;
 <body class="poppins-regular" >
     <nav class="navbar">
         <div class="logo_name">
-            <img src="/assets/logo.png" alt="logo"> Dev<strong>Board</strong> 
+            <img src="./assets/logo.png" alt="logo"> Dev<strong>Board</strong> 
         </div>
         <div class="nav_options">
             <div class="do_count">
-            <img src="/assets/checkbox.png" alt="checkbox">
+            <img src="./assets/checkbox.png" alt="checkbox">
             <span id="navTaskCount">23</span>
             </div>
           <button class="theme_btn" id="themeButton">
-            <img src="/assets/theme-btn.png" alt="theme button">
+            <img src="./assets/theme-btn.png" alt="theme button">
           </button> 
         </div>
 
@@ -231,7 +231,7 @@ gap: 20px;
     <section class="overview">
         <div class="task-info">
             <div class="checkbox-icon">
-                <img src="/assets/checkbox.png" alt=""> 
+                <img src="./assets/checkbox.png" alt=""> 
             </div>
             <div>
                 <p>Task Assigned</p>
@@ -241,13 +241,13 @@ gap: 20px;
         </div>
         <div class="discover" id="discoverNew">
             <div>
-                <img src="/assets/board.png" alt=""> 
+                <img src="./assets/board.png" alt=""> 
             </div>
             <p>Discover Something New Today!</p>
         </div>
         <div class="date">
             <div class="calender-icon">
-                <img src="/assets/calender.png" alt=""> 
+                <img src="./assets/calender.png" alt=""> 
             </div>
             <p id="calendarDate"></p>
         </div>
@@ -312,7 +312,7 @@ gap: 20px;
     <div>
     <section  class="aside">
         <div class="activity-top">
-            <img src="/assets/activity.png" alt="">
+            <img src="./assets/activity.png" alt="">
             <h3>Activity Log</h3>
             <button class="clear-history">Clear History</button>
     
@@ -324,6 +324,6 @@ gap: 20px;
        </section>
     </div>
    </main>
-  <script src="/assignment5.js"></script>
+  <script src="./assignment5.js"></script>
 </body>
 </html>
